--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     //gson
     compile 'com.google.code.gson:gson:2.4'
 
+    //Cardview
+    compile'com.android.support:cardview-v7:25.3.1'
+
 }
